devops/kubernetes/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorim-app-deployment
  labels:
    app: factorim-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factorim-app
  template:
    metadata:
      labels:
        app: factorim-app
    spec:
      containers:
        - name: factorim-app
          image: ghcr.io/factorim/factorim-nestjs-nextjs-boilerplate/factorim-app:1.0.0
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: regcred
