devops/kubernetes/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: factorim-app-service
spec:
  selector:
    app: factorim-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30010
  type: NodePort
